plang/testing/logs/false-incorrect/179/program179.p.p
n :- ((aN3Q (rs iQsAo J ue (n9aD GXVF viy (Z) Tcot)) D1 (Lt))); su (W); bTd (n), rs (gPU) lYX5 (T); uw1tn, af meeTK.

tY (BU).
g7L2 (HY) OkwJV.


sG (Mt).
eCtHU (iQ7Ej (oE5yM) g6E I3u) :- ywrxF stoJ0, v d (H) KP, (h (K) (MEo)), ((grX03 (hi (qgGTl r (VsnJ) (G6M))))), ikbTh kgmCr z; ((bePPR F TH J0Rj3)), aTtw p (j) lJFmo.


dEkAu TUwT (Q0) v :- mK7i (beJ4 (z l22 x1 lR d9h)) (HOx), (dmUMH vvr (LqD)), yiR (b) (Yy1) (H).


? h (mON (GN) q) (J) f; (wMR evDO; vXF96); (w (EDI) q8M); su (KVppW) UTKWL (Gi), whn TJcPw YvJvG; us iC OG1Am; x9 (g (K) (fnq Ij1 qM)) D (BOiag) (K6D), dkuFJ D7CH0 Ah1AH jD (xOQ8S GCQ (oAp (dhh36 OYLR cO))).